sfdx/order-fulfillment/force-app/main/default/objects/public_orders__x/public_orders__x.object-meta.xml
<CustomObject>
    <description>Fulfillment Orders from Heroku Connect</description>
    <externalDataSource>Heroku_Connect</externalDataSource>
    <externalName>public$orders</externalName>
    <label>Fulfillment Order</label>
    <pluralLabel>Fulfillment Orders</pluralLabel>
</CustomObject>