sfdx/order-fulfillment/force-app/main/default/objects/public_orders__x/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <description>amount</description>
    <externalDeveloperName>amount</externalDeveloperName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>