sfdx/order-fulfillment/force-app/main/default/objects/public_orders__x/fields/approved__c.field-meta.xml
<CustomField>
    <fullName>approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>approved</description>
    <externalDeveloperName>approved</externalDeveloperName>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>