sfdx/order-fulfillment/force-app/main/default/objects/public_orders__x/fields/createdat__c.field-meta.xml
<CustomField>
    <fullName>createdat__c</fullName>
    <description>createdat</description>
    <externalDeveloperName>createdat</externalDeveloperName>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>