sfdx/order-fulfillment/force-app/main/default/objects/public_orders__x/fields/updatedat__c.field-meta.xml
<CustomField>
    <fullName>updatedat__c</fullName>
    <description>updatedat</description>
    <externalDeveloperName>updatedat</externalDeveloperName>
    <label>Updated At</label>
    <type>DateTime</type>
</CustomField>