sfdx/order-fulfillment/force-app/main/default/objects/public_orders__x/listViews/Approved_Orders.listView-meta.xml
<ListView>
    <fullName>Approved_Orders</fullName>
    <columns>ExternalId</columns>
    <columns>category__c</columns>
    <columns>amount__c</columns>
    <columns>approved__c</columns>
    <columns>createdat__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Approved Orders</label>
</ListView>